# rust-stat

./: .cmds  .gitignore  Cargo.toml  README.md  build.rs  stat.proto  stat.py  stat.sh  stat_pb2.py  stater.py  stater.sh
src/: main.rs  stat.proto  stat.rs  stat_pb2.py
stat/: Cargo.toml  build.rs
stat/src/: fleetspeak.stat.rs  main.rs  stat.proto  stat.rs
